Trying to make sure the signup on the lower screen doesn't wrap.

--- a/memmee-client/src/main/resources/css/memmee.css
+++ b/memmee-client/src/main/resources/css/memmee.css
@@ -331,7 +331,7 @@ input.rounded{
 }
 .signup.stretched label{
     display: inline-block;
-    margin-right: 93px;
+    margin-right: 85px;
     font: 21px/1em 'Crimson Text', 'Times New Roman', Times, serif;
     color: #364a62;
 }
